bc023c3 fix break in header-v2 on desktop

--- a/src/06-components/organisms/navigation-v2/navigation-v2.scss
+++ b/src/06-components/organisms/navigation-v2/navigation-v2.scss
@@ -310,7 +310,7 @@
       transition: none;
       max-height: 0;
       background-color: $white;
-      top: 70px;
+      top: 68px;
       border: 1px solid $black-30;
       left: -1px;
       padding: $M $XXL;
